# struct-wrapper

./: README.md  pyproject.toml
src/struct_wrapper/: __init__.py  struct_wrapper_impl.py
